Breakdown performance testing steps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,6 +75,7 @@ jobs:
           script: echo "Generated AVD snapshot for caching."
 
       - name: Generate APKs for performance quest-tests
+        working-directory: android
         run: ./gradlew :quest:assembleEcbisDebugAndroidTest --stacktrace
 
       - name: Run instrumentation tests manually
