Breakdown performance testing steps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,7 @@ jobs:
 
       - name: Generate APKs for performance quest-tests
         working-directory: android
-        run: ./gradlew :quest:assembleEcbisDebugAndroidTest --stacktrace
+        run: ./gradlew :quest:assembleEcbisDebugAndroidTest --stacktrace && /Users/runner/Library/Android/sdk/platform-tools/adb install quest/build/outputs/apk/androidTest/ecbis/debug/quest-ecbis-debug-androidTest.apk
 
       - name: Run instrumentation tests manually
         uses: reactivecircus/android-emulator-runner@v2
