--- a/android/dataclerk/build.gradle
+++ b/android/dataclerk/build.gradle
@@ -152,6 +152,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation "androidx.paging:paging-compose:3.2.0-rc01"
 
     //Hilt - Dependency Injection
     implementation "com.google.dagger:hilt-android:$hiltVersion"
