--- a/android/dataclerk/build.gradle
+++ b/android/dataclerk/build.gradle
@@ -147,6 +147,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
 
+    implementation deps.accompanist.swiperefresh
+
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
