--- a/.github/workflows/performance-tests.yml
+++ b/.github/workflows/performance-tests.yml
@@ -1,7 +1,6 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
+# This workflow will run the performance tests
 
-name: Performance tests
+name: CI
 
 on:
   pull_request:
@@ -13,12 +12,11 @@ env:
  CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
 jobs:
-
   quest-tests:
     runs-on: macos-latest
     strategy:
       matrix:
-        api-level: [30]
+        api-level: [28]
     steps:
       - name: Cancel Previous workflow runs
         uses: styfle/cancel-workflow-action@0.9.1
@@ -43,7 +41,7 @@ jobs:
 
       - name: Setup Gradle cache
         uses: gradle/gradle-build-action@v2
-      
+
       - name: Load AVD cache
         uses: actions/cache@v2
         id: avd-cache
@@ -52,6 +50,10 @@ jobs:
             ~/.android/avd/*
             ~/.android/adb*
           key: avd-${{ matrix.api-level }}
+
+      - name: Download sample database for performance tests
+        working-directory: android
+        run: wget -q https://github.com/ekigamba/debug-jacoco-reports/releases/download/v0.0.1/resources.db -P quest/src/androidTest/assets/
 
       - name: Create AVD and generate snapshot for caching
         if: steps.avd-cache.outputs.cache-hit != 'true'
@@ -65,7 +67,7 @@ jobs:
           disable-animations: false
           script: echo "Generated AVD snapshot for caching."
 
-      - name: Run Quest module performance tests
+      - name: Run instrumentation tests manually
         uses: reactivecircus/android-emulator-runner@v2
         with: 
           working-directory: android
@@ -74,7 +76,8 @@ jobs:
           force-avd-creation: true
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: ./gradlew :quest:clean && ./gradlew :quest: --stacktrace -e package org.smartregister.fhircore.quest.performance
+          script: ./gradlew :quest:assembleEcbisDebugAndroidTest --stacktrace && /Users/runner/Library/Android/sdk/platform-tools/adb install quest/build/outputs/apk/androidTest/ecbis/debug/quest-ecbis-debug-androidTest.apk && ./gradlew :quest:assembleEcbisDebug --stacktrace && /Users/runner/Library/Android/sdk/platform-tools/adb install quest/build/outputs/apk/ecbis/debug/quest-ecbis-debug.apk && /Users/runner/Library/Android/sdk/platform-tools/adb shell am instrument -w -e package org.smartregister.fhircore.performance -e "androidx.benchmark.suppressErrors" ACTIVITY-MISSING,CODE-COVERAGE,DEBUGGABLE,UNLOCKED,EMULATOR -e additionalTestOutputDir "/sdcard/Download/" org.smartregister.opensrp.ecbis.test/org.smartregister.fhircore.quest.QuestTestRunner && /Users/runner/Library/Android/sdk/platform-tools/adb shell ls /sdcard/Download/ && /Users/runner/Library/Android/sdk/platform-tools/adb pull /sdcard/Download/org.smartregister.opensrp.ecbis-benchmarkData.json quest/
 
-      - name: Check performance tests
-        run: ./gradlew :quest:checkPerformance
+      - name: Check performance results
+        working-directory: android
+        run: ./gradlew :quest:checkPerformanceLimits --stacktrace
