--- a/android/quest/src/mpower-mcgovern/assets/configs/app/sync_config.json
+++ b/android/quest/src/mpower-mcgovern/assets/configs/app/sync_config.json
@@ -5,6 +5,30 @@
     {
       "resource": {
         "resourceType": "SearchParameter",
+        "name": "organization",
+        "code": "organization",
+        "base": [
+          "Patient"
+        ],
+        "type": "token",
+        "expression": "#organization"
+      }
+    },
+    {
+      "resource": {
+        "resourceType": "SearchParameter",
+        "name": "organization",
+        "code": "managing-entity",
+        "base": [
+          "Group"
+        ],
+        "type": "token",
+        "expression": "#organization"
+      }
+    },
+    {
+      "resource": {
+        "resourceType": "SearchParameter",
         "name": "_id",
         "code": "_id",
         "base": [
@@ -16,7 +40,6 @@
           "Questionnaire",
           "StructureMap",
           "Task",
-          "Group",
           "PlanDefinition",
           "RelatedPerson",
           "Library",
