--- a/android/quest/src/main/assets/configs/app/composition_config.json
+++ b/android/quest/src/main/assets/configs/app/composition_config.json
@@ -224,6 +224,22 @@
           }
         }
       ]
+    },
+    {
+      "title": "Questionnaires",
+      "mode": "working",
+      "section": [
+        {
+          "title": "Add household",
+          "focus": {
+            "reference": "Questionnaire/f210a832-857f-49e6-93f5-399eec4f4edb",
+            "identifier": {
+              "value": "household-registration"
+            }
+          },
+          "mode": "working"
+        }
+      ]
     }
   ]
 }
