Revert StructureMap and PlanDefinition in sync config
Signed-off-by: Elly Kitoto <junkmailstoelly@gmail.com>

--- a/android/quest/src/main/assets/configs/app/sync_config.json
+++ b/android/quest/src/main/assets/configs/app/sync_config.json
@@ -25,8 +25,10 @@
           "CarePlan",
           "QuestionnaireResponse",
           "Questionnaire",
+          "StructureMap",
           "Task",
           "Group",
+          "PlanDefinition",
           "RelatedPerson",
           "Library",
           "Measure",
@@ -82,8 +84,10 @@
           "CarePlan",
           "QuestionnaireResponse",
           "Questionnaire",
+          "StructureMap",
           "Task",
           "Group",
+          "PlanDefinition",
           "RelatedPerson",
           "Library",
           "Measure",
