Added Member Registration and Referral Resources

--- a/android/quest/src/mpower-mcgovern/assets/configs/app/navigation_config.json
+++ b/android/quest/src/mpower-mcgovern/assets/configs/app/navigation_config.json
@@ -67,7 +67,7 @@
       "showCount": true,
       "menuIconConfig": {
         "type": "local",
-        "reference": "ic_childs"
+        "reference": "ic_kids"
       },
       "actions": [
         {
