--- a/android/quest/src/mpower-mcgovern/assets/configs/app/profiles/household_profile_config.json
+++ b/android/quest/src/mpower-mcgovern/assets/configs/app/profiles/household_profile_config.json
@@ -108,7 +108,7 @@
           "trigger": "ON_CLICK",
           "workflow": "LAUNCH_QUESTIONNAIRE",
           "questionnaire": {
-            "id": "252",
+            "id": "4234",
             "title": "Add household member",
             "saveButtonText": "Add Member",
             "resourceType": "Patient",
@@ -117,8 +117,7 @@
               "memberResourceType": "Patient"
             },
             "planDefinitions": [
-              "340",
-              "306"
+              "4242"
             ],
             "snackBarMessage": {
               "message": "Household member has been added",
@@ -333,24 +332,10 @@
             "registerCard": {
               "rules": [
                 {
-                  "name": "patientFirstName",
+                  "name": "patientName",
                   "condition": "true",
                   "actions": [
-                    "data.put('patientFirstName', fhirPath.extractValue(Patient, \"Patient.name[0].select(given[0])\"))"
-                  ]
-                },
-                {
-                  "name": "patientMiddleName",
-                  "condition": "true",
-                  "actions": [
-                    "data.put('patientMiddleName', fhirPath.extractValue(Patient, \"Patient.name[0].select(text)\"))"
-                  ]
-                },
-                {
-                  "name": "patientLastName",
-                  "condition": "true",
-                  "actions": [
-                    "data.put('patientLastName', fhirPath.extractValue(Patient, \"Patient.name[0].select(family)\"))"
+                    "data.put('patientName', fhirPath.extractValue(Patient, \"Patient.name[0].select(text)\"))"
                   ]
                 },
                 {
@@ -379,13 +364,6 @@
                   "condition": "true",
                   "actions": [
                     "data.put('patientGender', service.extractGender(Patient))"
-                  ]
-                },
-                {
-                  "name": "patientName",
-                  "condition": "true",
-                  "actions": [
-                    "data.put('patientName', data.get('patientFirstName') + ' ' + data.get('patientMiddleName') + ' ' + data.get('patientLastName') + ', ' + (data.get('patientGender') == 'Female'? 'F': data.get('patientGender') == 'Male'? 'M': data.get('patientGender')) + ', ' +  data.get('patientAge'))"
                   ]
                 },
                 {
@@ -616,7 +594,7 @@
                       "details": [
                         {
                           "viewType": "COMPOUND_TEXT",
-                          "primaryText": "@{patientFirstName} @{patientLastName}",
+                          "primaryText": "@{patientName}",
                           "primaryTextColor": "@{patientTextColor}"
                         },
                         {
@@ -696,24 +674,10 @@
             "registerCard": {
               "rules": [
                 {
-                  "name": "patientFirstName",
+                  "name": "patientName",
                   "condition": "true",
                   "actions": [
-                    "data.put('patientFirstName', fhirPath.extractValue(Patient, \"Patient.name[0].select(given[0])\"))"
-                  ]
-                },
-                {
-                  "name": "patientMiddleName",
-                  "condition": "true",
-                  "actions": [
-                    "data.put('patientMiddleName', fhirPath.extractValue(Patient, \"Patient.name[0].select(text)\"))"
-                  ]
-                },
-                {
-                  "name": "patientLastName",
-                  "condition": "true",
-                  "actions": [
-                    "data.put('patientLastName', fhirPath.extractValue(Patient, \"Patient.name[0].select(family)\"))"
+                    "data.put('patientName', fhirPath.extractValue(Patient, \"Patient.name[0].select(text)\"))"
                   ]
                 },
                 {
@@ -742,13 +706,6 @@
                   "condition": "true",
                   "actions": [
                     "data.put('patientGender', service.extractGender(Patient))"
-                  ]
-                },
-                {
-                  "name": "patientName",
-                  "condition": "true",
-                  "actions": [
-                    "data.put('patientName', data.get('patientFirstName') + ' ' + data.get('patientMiddleName') + ' ' + data.get('patientLastName') + ', ' + (data.get('patientGender') == 'Female'? 'F': data.get('patientGender') == 'Male'? 'M': data.get('patientGender')) + ', ' +  data.get('patientAge'))"
                   ]
                 },
                 {
