Add action for uploading dependency check report to defectdojo Fix typo on OAUTH_CIENT_ID variable

--- a/.github/workflows/dependency-check.yml
+++ b/.github/workflows/dependency-check.yml
@@ -15,7 +15,7 @@ on:
 env:
   FHIR_BASE_URL: ${{secrets.FHIR_BASE_URL}}
   OAUTH_BASE_URL: ${{secrets.OAUTH_BASE_URL}}
-  OAUTH_CIENT_ID: ${{secrets.OAUTH_CIENT_ID}}
+  OAUTH_CIENT_ID: ${{secrets.OAUTH_CLIENT_ID}}
   OAUTH_CLIENT_SECRET: ${{secrets.OAUTH_CLIENT_SECRET}}
   OAUTH_SCOPE: ${{secrets.OAUTH_SCOPE}}
   MAPBOX_SDK_TOKEN: ${{secrets.MAPBOX_SDK_TOKEN}}
@@ -50,6 +50,16 @@ jobs:
         with:
           name: dependency-check-report
           path: android/build/reports/dependency-check-report.xml
+          
+      - name: import dependency check report into defectdojo
+        run: |
+           curl -X POST -H "Content-Type: application/json" \
+           -H "Authorization: Token ${DEFECTDOJO_API_KEY}" \
+           -d @android/build/reports/dependency-check-report.xml \
+           "${DEFECTDOJO_API_URL}/api/v2/engagements/45/tests/247/import-scan/"
+         env:
+           DEFECTDOJO_API_URL: ${{ secrets.DEFECTDOJO_API_URL }}
+           DEFECTDOJO_API_KEY: ${{ secrets.DEFECTDOJO_API_KEY }}
         
 
 
